# cpp_test

./: .gitignore  CMakeLists - 副本.txt  CMakeLists.txt  CMakeLists_bak.txt  CMakePresets.json  README.MD
doc/: Doxyfile
doxygen_test/: Animal.h  Cat.cpp
src/: TestInfo.h  main.cpp  pch.h
src/algorithm/: UseCase.h  multy_level_sort.cpp  std_erase.cpp  std_find.cpp  std_partial_sort.cpp  std_partition.cpp  std_roate.cpp  std_transform.cpp
src/benchmark/: BM_Contours.h  BM_ECS_traditional_compare.cpp  BM_heap_value_iteration.cpp  BM_string_compare.cpp  BM_vector_of_double_iteration.cpp  BM_with_param.cpp  CADEntity.h  DocumentEntity.h  DocumentEntity_visitor.h  UseCase.h
src/boost/: UseCase.h
src/cereal/: CustomData.h  UseCase.h  cereal_test.cpp  custom_data_serialization.cpp
src/concurrencpp_test/: 10_regular_timer.cpp  11_oneshot_timer.cpp  12_delay_object.cpp  13_generator.cpp  14_async_locks.cpp  15_async_condition_variable.cpp  16_SLA_axis_init.cpp  17_parallel_coroutines.cpp  1_concurrencpp_hello_world.cpp  2_concurrencpp_even_number_counting.cpp  3_async_file_processing.cpp  4_async_file_processing_version_2.cpp  5_prime_number_finder.cpp  6_manual_executor.cpp  7_when_all.cpp  8_when_any.cpp  9_result_promise.cpp  UseCase.h  concurrencpp_hello_world.cpp
src/concurrencpp_test/lib/msvc-release/: concurrencpp.lib
src/design_pattern/: UseCase.h
src/design_pattern/bridge_pattern/: car.cpp  car.h  pimple_bridge_pattern.cpp
src/design_pattern/concepts_over_CRTP/: concepts_can_replace_inheritance.cpp  concepts_can_replace_inheritance_advanced.cpp
src/design_pattern/decorator_pattern/: ConferenceTicket.h
src/design_pattern/decorator_pattern/classic/: classic_decorator_design_pattern.cpp
src/design_pattern/decorator_pattern/compile_time_decorator_pattern/: ConferenceTicket.h  Decorators.h  compile_time_decorator.cpp
src/design_pattern/external_polymorphism_pattern/: ShapeConcept.h  ShapeModel.h  external_polymorphism_pattern.cpp
src/design_pattern/observer_pattern/: observer_using_std_function.cpp
src/design_pattern/owning_type_erasure_implementation/: OwningShapeModel.h  Shape.h  ShapeConcept.h  owning_type_erasure_implementation.cpp
src/design_pattern/prototype_pattern/: typical_prototype_pattern.cpp
src/design_pattern/singleton_pattern/: database.h  mock.h  persistenceInterface.cpp  persistenceInterface.h  singleton_with_dependency_injection.cpp  textfile.h
src/design_pattern/strategy_pattern/: strategy_pattern_combine_with_visitor_pattern.cpp  strategy_using_template_params.cpp
src/design_pattern/type_erasure_for_cutmaker_demo/: CAMComponent.h  CAMComponentConcept.h  OwningCAMComponentModel.h  cam_component_type_erasure_implementation.cpp
src/design_pattern/visitor_pattern/: visitor_pattern_in_std_variant_form.cpp
src/doxygen_test/: Animal.cpp  Cat.h  main.cpp
src/entt/: Common.h  UseCase.h  entt_basic_view.cpp  entt_copy_entity.cpp  entt_copy_to_another_registry.cpp  entt_ctx.cpp  entt_group.cpp  entt_multy_same_component_type.cpp  entt_reactive_storage.cpp  entt_runtime_unique_sequential_identifier.cpp  entt_runtime_view.cpp  entt_serialize_pointer.cpp  entt_snapshot.cpp  entt_snapshot_with_cereal.cpp  entt_tag.cpp  entt_view_with_iterator.cpp
src/error_handling/: 1_output_log_should_in_caller.cpp  2_use_optinal_to_convey_error_info.cpp  2_use_optional_to_convey_error_info.cpp  3_use_errno_to_convey_different_errors.cpp  4_custom_std_error_code.cpp  5_use_std_variant_as_return_error_info_container.cpp  6_use_expected.cpp  7_monadic_operation.cpp  UseCase.h
src/error_handling/error_code/: login_error_code.h
src/general/: UseCase.h  cereal_test.cpp  condition_variable.cpp  customize_iterator.cpp  customize_std_map.cpp  customize_unordered_map.cpp  data_type_overflow.cpp  function_object.cpp  inter_dependence.cpp  lambda_closure.cpp  noexcept_usage.cpp  polymorphism.cpp  polymorphism_do_things_in_base_constructor.cpp  polymorphism_dynamic_registry.cpp  semaphore.cpp  semaphore_test.cpp  std_async_complex_1.cpp  std_async_simple.cpp  std_atomic.cpp  std_decay.cpp  std_for_each.cpp  std_format.cpp  std_function_as_a_parameter.cpp  std_min_max_element.cpp  std_move.cpp  std_set.cpp  std_span.cpp  std_string_view.cpp  std_unique_ptr.cpp  std_unique_ptr_custom_deleter_should_call_delete_raw_ptr_inside.cpp  std_unique_ptr_with_custom_deleter.cpp  std_variant_with_template.cpp  std_variant_with_visitor.cpp  std_view_filter.cpp  std_view_keys_filter.cpp  useful_macros.cpp
src/googletest_test/: 10_check_points_in_mock.cpp  1_basic_test.cpp  2_testsuite_setup_teardown.cpp  3_multy_data_for_one_testcase.cpp  4_combine_function_and_param.cpp  5_typed_test.cpp  6_matcher_basic.cpp  7_custom_matcher.cpp  8_test_mock_class_bank_server.cpp  9_mock_call_action.cpp  UseCase.h
src/googletest_test/MockClass/: ATMMachineAsTestTarget.h  BankServer.h  MockServer.h
src/gtest/: 1_basic_test.cpp  4_combine_function_and_param.cpp  5_typed_test.cpp
src/numeric/: UseCase.h  std_inner_product.cpp
src/performance engineer/: UseCase.h  packing_and_encoding.cpp
src/performance_engineer/: UseCase.h  packing_and_encoding.cpp
src/sigslot/: UseCase.h  multi_thread_signal_slot.cpp  signal_basic.cpp  signal_with_param.cpp
src/templates/: MyTemplate.cpp  MyTemplate.h  UseCase.h  VariadicFuntionTemplate.cpp  abbreviation_template.cpp  concept_requirements.cpp  concepts.cpp  hide_implementation_template_use.cpp  parameter_pack_expansion_and_perfect_forwarding.cpp  stand_alone_fold_expression.cpp  template_function_overload.cpp  variadic_template_member_attributes.cpp  variadic_template_use.cpp
src/templates/template_classes/: HideImplementationTemplate.cpp  HideImplementationTemplate.h  VariadicClassTemplate.cpp  VariadicClassTemplate.h  VariadicFuntionTemplate.cpp  VariadicFuntionTemplate.h
src/type_traits/: UseCase.h  function_return_values_in_type_traits.cpp  std_decay_t.cpp  std_declval.cpp  std_is_same_v.cpp
src/working_demo_code/: UseCase.h  split_contour_for_fabric_cutting.cpp
(+3 files in other folders)
